# serializer version: 1
# name: test_definition_version_deterministic
  'f9d00aa3ba4e6d56744da07458548910470d79cd615b0ad4b36fc0b4770ee126'
# ---
# name: test_definition_version_excludes_project
  dict({
    'definition_version_a': 'bf882ba4e7c5546090fbdaf7bbe2182f60a2652572c2d3e0863101748f6aac8b',
    'definition_version_b': 'bf882ba4e7c5546090fbdaf7bbe2182f60a2652572c2d3e0863101748f6aac8b',
    'definition_versions_same': True,
    'feature_version_a': '3731d5aef6d53cfda612433171c52401406f94fd1c3482e7754ef2b24d85d170',
    'feature_version_b': '3731d5aef6d53cfda612433171c52401406f94fd1c3482e7754ef2b24d85d170',
    'feature_versions_same': True,
  })
# ---
# name: test_feature_version_unchanged_by_project
  'fcd6985a4dea45488450141be5c4712fd47781b4d0a7e42f04760c376eadf42f'
# ---
# name: test_feature_with_deps_same_definition_version
  dict({
    'downstream_definition_version': '0e7abf66d124d7f02cac2fcfb66f470dcbd01e826176b14a4d9254f80f6bcaed',
    'downstream_feature_version': 'b7478f4be75eea0fa8d468df3f33cc8033cde080313e4ef783222fd65416f8e2',
    'upstream_definition_version': 'e0d48e50e1ae689f2cc800e747923374f85773054d81675dc516d4a8b99f27a6',
    'upstream_feature_version': '8fd9019605c792a83a2cab5aaac4aea7a1e8524e51b728c0e02beb8032ee0ec1',
  })
# ---
# name: test_project_in_graph_snapshot
  dict({
    'feature_keys': list([
      'feature1',
      'feature2',
    ]),
    'has_definition_version_feature1': True,
    'has_definition_version_feature2': True,
    'has_project_feature1': True,
    'has_project_feature2': True,
  })
# ---
# name: test_provenance_by_field_unchanged_across_graphs
  dict({
    'field1': '9cb9f5bd9b380278e273033d16f07feabda7bdf5b813e9941b0f29e63b20efdb',
    'field2': '0b485f68befbb7abb029b43a698161745c63259b8ad0bc00260b7da4b9830243',
  })
# ---
